--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": "true",
   "dependencies": {
     "@hotwired/turbo-rails": "^7.1.3",
+    "@tailwindcss/forms": "^0.5.2",
     "esbuild": "^0.15.6",
     "postcss": "^8.4.16",
     "ralix": "^0.10.0",
-    "tailwindcss": "^3.1.8",
-    "@tailwindcss/forms": "^0.5.2"
+    "tailwindcss": "^3.1.8"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
