--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@hotwired/turbo-rails": "^7.1.3",
     "@tailwindcss/forms": "^0.5.2",
     "esbuild": "^0.15.6",
+    "micromodal": "^0.4.10",
     "ralix": "^0.10.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "tippy.js": "^6.3.7"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.css -o ./app/assets/builds/application.css --minify"
   }
 }
