--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+FACEBOOK_CLIENT_ID=facebook_client_id
+FACEBOOK_CLIENT_SECRET=facebook_client_secret
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
 GITHUB_CLIENT_ID=github_client_id
