--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": "true",
   "dependencies": {
     "@hotwired/turbo-rails": "^7.2.0",
+    "@rails/actiontext": "^7.0.5",
     "@tailwindcss/forms": "^0.5.2",
     "esbuild": "^0.15.6",
     "micromodal": "^0.4.10",
     "ralix": "^1.4.0",
     "tailwindcss": "^3.3.1",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "trix": "^2.0.5"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
