--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
 GITHUB_CLIENT_ID=github_client_id
 GITHUB_CLIENT_SECRET=github_client_secret
+DATABASE_HOST=db
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=password
+POSTGRES_PASSWORD=password
