--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": "true",
   "dependencies": {
     "@hotwired/turbo-rails": "^8.0.0",
-    "@rails/actiontext": "^7.2.0",
+    "@rails/actiontext": "^8.0.0",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/forms": "^0.5.9",
     "esbuild": "^0.25.0",
@@ -14,7 +14,7 @@
     "trix": "^2.1.15"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
     "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/application.css -o ./app/assets/builds/application.css --minify"
   }
 }
